<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".newuser.NewPassActivity">

    <ScrollView
        android:id="@+id/scroll_pass_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/setup_pass"
                android:textColor="@color/white"
                android:textSize="25sp" />


            <LinearLayout
                android:id="@+id/lin_suggested_pass_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/rounded_corner"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/txt_pass_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corner_red"
                    android:padding="10dp"
                    android:text=""
                    android:textColor="@color/red"
                    android:textSize="15sp"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:padding="10dp"
                    android:text="@string/pass"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_pass_guideline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/pass_guidelines"
                    android:textColor="@color/blue"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="10dp"
                    android:layout_toLeftOf="@+id/img_submit"
                    android:backgroundTint="@color/white"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:digits="@string/password"
                        android:inputType="textPassword"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/img_submit"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignBottom="@+id/input_pass"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="5dp"
                    android:rotation="90"
                    android:src="@drawable/ic_up_arrow" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>